convert images to webp

--- a/src/index.html
+++ b/src/index.html
@@ -10,64 +10,78 @@
 <body>
 	<nav class="nav">
 		<ul class="nav__list">
-			<li class="nav__item faces" data-tab="1">Faces</li>
-			<li class="nav__item places" data-tab="2">Places</li>
+			<li class="nav__item faces">Faces</li>
+			<li class="nav__item places">Places</li>
 		</ul>
 	</nav>
 	<header class="title__container">
 		<h1 class="title__name"> Keita Iisaka </h1>
 		<h2 class="title__desc">Photography</h2>
-		<a class=" insta_logo" href="https://www.instagram.com/keitaiisaka/">
-			<i class="tooltip fa-brands fa-square-instagram"><span class="tooltiptext tooltiptext--right">Visit my
-					instagram</span></i>
-		</a>
-		<a class="link_email tooltip" href="mailto:iisak8a@gmail.com">iisak8a@gmail.com <span
+		<div class="insta_logo"><a href="https://www.instagram.com/keitaiisaka/"><i
+					class="tooltip  fa-brands fa-square-instagram"><span class="tooltiptext tooltiptext--right">Visit my
+						instagram</span>
+				</i></a></div>
+		<a class="tooltip" href="mailto:iisak8a@gmail.com">iisak8a@gmail.com <span
 				class="tooltiptext tooltiptext--left">E-mail me</span></a>
 	</header>
 	<main class="gallery">
 		<div class="gallery__faces">
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2019-50.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2019-50.jpg?as=webp " type="image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2019-50.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2020-8.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2020-8.jpg?as=webp " type="image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2020-8.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2020-27.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2020-27.jpg?as=webp " type="image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2020-27.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/faces/DSC_0677.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/faces/DSC_0677.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2020-3.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2020-3.jpg?as=webp " type="image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2020-3.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2019-49.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2019-49.jpg?as=webp " type="image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2019-49.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/faces/DSC_0178.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/faces/DSC_0178.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/faces/Jaymax 2020-20.jpg" alt="">
+				<source srcset="./images/faces/Jaymax2020-20.jpg?as=webp" type=" image/webp" />
+				<img class="exhibit" src="./images/faces/Jaymax2020-20.jpg" alt="">
 			</picture>
 		</div>
 		<div class="gallery__places hidden">
 			<picture>
+				<source srcset="./images/places/DSC_1037.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/places/DSC_1037.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/places/DSC_0741.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/places/DSC_0741.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/places/DSC_0345-6.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/places/DSC_0345-6.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/places/DSC_0358-8.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/places/DSC_0358-8.jpg" alt="">
 			</picture>
 			<picture>
-				<img class="exhibit" src="./images/places/DSC_0542-Edit copy.jpg" alt="">
+				<source srcset="./images/places/DSC_0542.jpg?as=webp" type="image/webp" />
+				<img class="exhibit" src="./images/places/DSC_0542.jpg" alt="">
 			</picture>
 			<picture>
+				<source srcset="./images/places/DSC_0551-2.jpg?as=webp" type="image/webp" />
 				<img class="exhibit" src="./images/places/DSC_0551-2.jpg" alt="">
 			</picture>
 		</div>
