edit email address

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 					class="tooltip  fa-brands fa-square-instagram"><span class="tooltiptext tooltiptext--right">Visit my
 						instagram</span>
 				</i></a></div>
-		<a class="tooltip" href="mailto:iisak8a@gmail.com">iisak8a@gmail.com <span
+		<a class="tooltip" href="mailto:info@keitaiisaka.co.uk">info@keitaiisaka.co.uk <span
 				class="tooltiptext tooltiptext--left">E-mail me</span></a>
 	</header>
 	<main class="gallery">
